# CHANGELOG

## Unreleased

- Export mergeOverrides helper function